crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__local_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 17
        },
        "end": {
          "line": 3,
          "character": 30
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected type `i32`, found `i64`"
    }
  ]
}
