crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__missing_then.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 19
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: expected `(`"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 12
        },
        "end": {
          "line": 7,
          "character": 12
        }
      },
      "severity": 1,
      "code": "syntax",
      "source": "wat",
      "message": "syntax error: expected `(`"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `then` branch with expected types []"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `then` branch with expected types []"
    }
  ]
}
