crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__more_operands.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 14
        },
        "end": {
          "line": 0,
          "character": 65
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected 2 operands, found 3"
    }
  ]
}
