crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__new_stack_for_new_block.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 6
        },
        "end": {
          "line": 6,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found []"
    }
  ]
}
