crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__operand_count_pluralization.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 14
        },
        "end": {
          "line": 0,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found []"
    }
  ]
}
